# Admin_panel_sprint_2

./: README.md  docker-compose.yml  postman_tests.json  pyproject.toml
movies_admin/: Dockerfile
movies_admin/config/: urls.py
movies_admin/movies/: admin.py  models.py  views.py
movies_admin/movies/api/v1/: serializers.py  urls.py  views.py
nginx/: Dockerfile  nginx.tmpl
schema_design/: db_schema.sql
sqlite_to_postgres/: load_data.py
