[tool.poetry]
name = "mp02"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
gunicorn = "^20.1.0"
djangorestframework = "^3.12.4"
django-debug-toolbar = "^3.2.2"
django-extensions = "^3.1.3"
django-filter = "^2.4.0"
psycopg2-binary = "^2.9.1"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
